Pcakage file updated

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ahmed Rabie Mahmoud Mohamed",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "colors": "^1.4.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "method-override": "^3.0.0"
   }
 }
